--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,5 @@ dependencies {
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc02"
-
-    // TODO (01) Add lifecycle-extensions gradle
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
